user rpc and api
