# api/docs/swagger.json
@@ -1075,6 +1075,9 @@
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
                 },
+                "page_info": {
+                    "$ref": "#/definitions/entity.PageInfo"
+                },
                 "users": {
                     "type": "array",
                     "items": {
@@ -1389,6 +1392,15 @@
             ],
             "properties": {
                 "avatar_url": {
+                    "type": "string"
+                },
+                "class": {
+                    "type": "string"
+                },
+                "department": {
+                    "type": "string"
+                },
+                "motto": {
                     "type": "string"
                 },
                 "name": {
